--- a/src/Componenet/RowPost/RowPost.css
+++ b/src/Componenet/RowPost/RowPost.css
@@ -16,7 +16,12 @@
 
 
 .poster{
-    max-height: 250px;
+    max-height: 210px;
+    margin-right: 10px;
+
+}
+.small_poster{
+    max-height: 150px;
     margin-right: 10px;
 
 }
