--- a/src/Componenet/RowPost/RowPost.css
+++ b/src/Componenet/RowPost/RowPost.css
@@ -18,10 +18,20 @@
 .poster{
     max-height: 210px;
     margin-right: 10px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
 
 }
 .small_poster{
+    cursor: pointer;
     max-height: 150px;
     margin-right: 10px;
+    transition: transform 0.3s ease-in-out;
 
+}
+.poster:hover{
+    transform: scale(1.1);
+}
+.small_poster:hover{
+    transform: scale(1.1);
 }
