--- a/src/Componenet/NavBar/NavBar.css
+++ b/src/Componenet/NavBar/NavBar.css
@@ -6,9 +6,7 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
-    /* background-image: linear-gradient(180deg,transparent,rgba(37,37,37,.61),#111); */
-
-
+    background-image: linear-gradient(360deg,transparent,rgba(37,37,37,.61),#111);
 }
 
 .logo {
